Ajout de try catch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,30 +129,43 @@ jobs:
         PR_BODY=$(jq -r '.pull_request.body' "${GITHUB_EVENT_PATH}")
         
         echo $PR_BODY
-        if echo "$PR_BODY" | grep -q '\- \[x\] Mon code'; then
-          echo "✅ All required checkboxes are checked!" 
-        else
-          echo "Erreur : Certaines cases de la checklist ne sont pas cochées."
-          exit 1 
-        fi
+        {
+          try {
+            if echo "$PR_BODY" | grep -q '\- \[x\] Mon code'; then
+              echo "✅ All required checkboxes are checked!" 
+            else
+              echo "Erreur : Certaines cases de la checklist ne sont pas cochées."
+              exit 1 
+            fi
+          } catch {
+            echo "An error occurred while validating the checkboxes."
+            exit 1
+          }
+        }
         echo "pr-body<<EOF" >> $GITHUB_OUTPUT
         echo "$PR_BODY" >> $GITHUB_OUTPUT
         echo "EOF" >> $GITHUB_OUTPUT
-        
+      shell: bash  
         
     - name: Valider la description de la PR
       run: |
         echo "The PR Body is:"
         echo "${{ steps.validate.outputs.pr-body }}"
         
-        if [[ "${{ steps.validate.outputs.pr-body }}" == *"Emptyone"* ]]; then
-          echo "The text 'Empty' exists in the PR body."
-          exit 1
-          
-        else
-          echo "The text 'Empty file' does not exist in the PR body."
-          
-        fi
+        {
+          try {
+            if [[ "${{ steps.validate.outputs.pr-body }}" == *"Emptyone"* ]]; then
+              echo "The text 'Empty' exists in the PR body."
+              exit 1
+            else
+              echo "The text 'Empty file' does not exist in the PR body."
+            fi
+          } catch {
+            echo "An error occurred while checking the PR body."
+            exit 1
+          }
+        }
+      shell: bash 
     - name: Cache node modules
       uses: actions/cache@v3
       env:
