Ajout de try catch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,7 +145,7 @@ jobs:
         echo "The PR Body is:"
         echo "${{ steps.validate.outputs.pr-body }}"
         
-        if [[ "${{ steps.validate.outputs.pr-body }}" == *"Empty"* ]]; then
+        if [[ "${{ steps.validate.outputs.pr-body }}" == *"Emptyone"* ]]; then
           echo "The text 'Empty' exists in the PR body."
           exit 1
           
