--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,7 +153,7 @@ jobs:
         
         {
         
-          if [[ "${{ steps.validate.outputs.pr-body }}" == *"Emptyone"* ]]; then
+          if [[ "${{ steps.validate.outputs.pr-body }}" == *"Empty"* ]]; then
             echo "The text 'Empty' exists in the PR body."
             exit 1
             
