--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,24 +126,30 @@ jobs:
     - name: Valider les cases cochées dans la description de la PR
       id: validate  
       run: |
-        {
-        
-          PR_BODY=$(jq -r '.pull_request.body' "${GITHUB_EVENT_PATH}")
-          
-          echo $PR_BODY
-          if echo "$PR_BODY" | grep -q '\- \[x\] Mon code'; then
-            echo "✅ All required checkboxes are checked!" 
-          else
-            echo "Erreur : Certaines cases de la checklist ne sont pas cochées."
-            exit 1 
-          fi
-          echo "pr-body<<EOF" >> $GITHUB_OUTPUT
-          echo "$PR_BODY" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT 
-        
-        } || {
-          echo "Bloc catch : Gestion de l'erreur."
+        set -e  # Arrête le script en cas d'erreur (comme un try implicite)
+
+        # Fonction pour gérer les erreurs (équivalent de 'catch')
+        error_handler() {
+          echo "Une erreur est survenue lors de l'extraction du corps de la pull request."
+          echo "Vérifiez que le fichier GITHUB_EVENT_PATH est correct et contient les données attendues."
+          exit 1
         }
+
+        # Attache le gestionnaire d'erreurs au script (trap agit comme 'catch')
+        trap 'error_handler' ERR
+
+        PR_BODY=$(jq -r '.pull_request.body' "${GITHUB_EVENT_PATH}")
+        
+        echo $PR_BODY
+        if echo "$PR_BODY" | grep -q '\- \[x\] Mon code'; then
+          echo "✅ All required checkboxes are checked!" 
+        else
+          echo "Erreur : Certaines cases de la checklist ne sont pas cochées."
+          exit 1 
+        fi
+        echo "pr-body<<EOF" >> $GITHUB_OUTPUT
+        echo "$PR_BODY" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
         
         
     - name: Valider la description de la PR
@@ -151,19 +157,14 @@ jobs:
         echo "The PR Body is:"
         echo "${{ steps.validate.outputs.pr-body }}"
         
-        {
-        
-          if [[ "${{ steps.validate.outputs.pr-body }}" == *"Empty"* ]]; then
-            echo "The text 'Empty' exists in the PR body."
-            exit 1
-            
-          else
-            echo "The text 'Empty file' does not exist in the PR body."
-            
-          fi
-        } || {
-          echo "Bloc catch : Gestion de l'erreur."
-        }
+        if [[ "${{ steps.validate.outputs.pr-body }}" == *"Empty"* ]]; then
+          echo "The text 'Empty' exists in the PR body."
+          exit 1
+          
+        else
+          echo "The text 'Empty file' does not exist in the PR body."
+          
+        fi
     - name: Cache node modules
       uses: actions/cache@v3
       env:
