--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,3 +78,9 @@ jobs:
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Dockerfile') }}
         restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
+    - name: Create comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        recreate: true
+        message: |
+            Release ${{ github.sha }} to <https://pr-${{ github.event.number }}.example.com>
