--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,3 +195,9 @@ jobs:
           COMMENT_BODY="✅ All required checkboxes are checked!"
         fi
         gh pr comment ${{ github.event.pull_request.number }} --body "$COMMENT_BODY"
+    - name: Create comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        recreate: true
+        message: |
+            Release ${{ github.sha }} to <https://pr-${{ github.event.number }}.example.com>
