--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,48 +123,48 @@ jobs:
         mkdir -p $HOME/bin
         mv jq $HOME/bin/
         echo "$HOME/bin" >> $GITHUB_PATH
-    - name: Valider les cases cochées dans la description de la PR
-      id: validate  
-      run: |
-        set -e  # Arrête le script en cas d'erreur (comme un try implicite)
+    # - name: Valider les cases cochées dans la description de la PR
+    #   id: validate  
+    #   run: |
+    #     set -e  # Arrête le script en cas d'erreur (comme un try implicite)
 
-        # Fonction pour gérer les erreurs (équivalent de 'catch')
-        error_handler() {
-          echo "Une erreur est survenue lors de l'extraction du corps de la pull request."
-          echo "Vérifiez que le fichier GITHUB_EVENT_PATH est correct et contient les données attendues."
-          exit 1
-        }
+    #     # Fonction pour gérer les erreurs (équivalent de 'catch')
+    #     error_handler() {
+    #       echo "Une erreur est survenue lors de l'extraction du corps de la pull request."
+    #       echo "Vérifiez que le fichier GITHUB_EVENT_PATH est correct et contient les données attendues."
+    #       exit 1
+    #     }
 
-        # Attache le gestionnaire d'erreurs au script (trap agit comme 'catch')
-        trap 'error_handler' ERR
+    #     # Attache le gestionnaire d'erreurs au script (trap agit comme 'catch')
+    #     trap 'error_handler' ERR
 
-        PR_BODY=$(jq -r '.pull_request.body' "${GITHUB_EVENT_PAT}")
+    #     PR_BODY=$(jq -r '.pull_request.body' "${GITHUB_EVENT_PAT}")
         
-        echo $PR_BODY
-        if echo "$PR_BODY" | grep -q '\- \[x\] Mon code'; then
-          echo "✅ All required checkboxes are checked!" 
-        else
-          echo "Erreur : Certaines cases de la checklist ne sont pas cochées."
-          exit 1 
-        fi
-        echo "pr-body<<EOF" >> $GITHUB_OUTPUT
-        echo "$PR_BODY" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
+    #     echo $PR_BODY
+    #     if echo "$PR_BODY" | grep -q '\- \[x\] Mon code'; then
+    #       echo "✅ All required checkboxes are checked!" 
+    #     else
+    #       echo "Erreur : Certaines cases de la checklist ne sont pas cochées."
+    #       exit 1 
+    #     fi
+    #     echo "pr-body<<EOF" >> $GITHUB_OUTPUT
+    #     echo "$PR_BODY" >> $GITHUB_OUTPUT
+    #     echo "EOF" >> $GITHUB_OUTPUT
         
         
-    - name: Valider la description de la PR
-      run: |
-        echo "The PR Body is:"
-        echo "${{ steps.validate.outputs.pr-body }}"
+    # - name: Valider la description de la PR
+    #   run: |
+    #     echo "The PR Body is:"
+    #     echo "${{ steps.validate.outputs.pr-body }}"
         
-        if [[ "${{ steps.validate.outputs.pr-body }}" == *"Emptyone"* ]]; then
-          echo "The text 'Empty' exists in the PR body."
-          exit 1
+    #     if [[ "${{ steps.validate.outputs.pr-body }}" == *"Emptyone"* ]]; then
+    #       echo "The text 'Empty' exists in the PR body."
+    #       exit 1
           
-        else
-          echo "The text 'Empty file' does not exist in the PR body."
+    #     else
+    #       echo "The text 'Empty file' does not exist in the PR body."
           
-        fi
+    #     fi
     - name: Cache node modules
       uses: actions/cache@v3
       env:
