--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,6 +198,7 @@ jobs:
     - name: Create comment
       uses: marocchino/sticky-pull-request-comment@v2
       with:
-        recreate: true
+        recreate: true 
+        GITHUB_TOKEN: ${{ secrets.TOCKEN_REGISTRY }}
         message: |
             Release ${{ github.sha }} to <https://pr-${{ github.event.number }}.example.com>
