--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,10 +195,10 @@ jobs:
           COMMENT_BODY="✅ All required checkboxes are checked!"
         fi
         gh pr comment ${{ github.event.pull_request.number }} --body "$COMMENT_BODY"
-    - name: Create comment
+    - name: Create comment here
       uses: marocchino/sticky-pull-request-comment@v2
       with:
-        recreate: true 
+        append: true
         GITHUB_TOKEN: ${{ secrets.TOCKEN_REGISTRY }}
         message: |
             Release ${{ github.sha }} to <https://pr-${{ github.event.number }}.example.com>
