--- a/.github/workflows/run_ci.yml
+++ b/.github/workflows/run_ci.yml
@@ -32,6 +32,9 @@ on:
 jobs:
   run-ci:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      issues: write
     
     steps:
       - name: Checkout repository
