--- a/.github/workflows/run_ci.yml
+++ b/.github/workflows/run_ci.yml
@@ -15,7 +15,7 @@ on:
     secrets:
       gh_token:
         description: 'GitHub token for API access'
-        required: true
+        required: false
   
   workflow_dispatch:
     inputs:
